--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,7 @@
           <img src="https://www.citypng.com/public/uploads/preview/square-twitter-app-icon-png-701751695055393gbfkdxl2km.png" alt="Twitter" class="w-8 h-8" />
         </a>
       </div>
-      <p>© 2025 Quizify. All rights reserved.</p>
+      <p class="text-sm">© 2025 Quizify. All rights reserved.</p>
     </section>
   </footer>
 
